@startuml
class Task {
    void init()
    STATES_e run()
    void exit()
}
class ChargeTask extends Task
class CLI extends Task
class DataUpload extends Task
class SleepTask extends Task

class SystemDesc{
    const char deviceID;
    LocationService pLocService;
    const SystemFlags_t flags;
}
class SystemFlags_t{
    bool batteryLow
    bool hasCharger
    bool inWater
}

class Recorder {
    int init()
    int hasData()
    int getLastPacket(void*, size_t, char* size_t)
    int popLastPacket(size_t)
    void setSessionName(const char*)
    int getNumFiles()
    int openSession(const char* const)
    int closeSession()
    int putBytes(const void*, size_t)
    int putData(T)
}
LocationService o-- pLocService
SystemDesc o-- SystemFlags_t
@enduml